# apex

./: .hgignore  BuildResources.bat  CMakeLists.txt  README.md  Renderer.sln  build_vs2015.bat
Renderer/: Renderer.vcxproj  Renderer.vcxproj.filters  imgui.ini
Renderer/graphics/: window.h
Renderer/graphics/view/: camera.h
Renderer/input/: mouse.h
Renderer/resources/shaders/: basic_texture.frag  basic_texture.vert
Renderer/src/: main.cpp
Renderer/src/graphics/: window.cpp  window.h
Renderer/src/input/: keyboard.cpp  keyboard.h
Renderer/src/utils/: color.h  console.h  (+1 more)
Renderer/utils/: rendering_types.h
cmake_config/: root_directory.h.in
demo/: main.cpp
demo/app/: Application.cpp  Application.h  application.cpp  application.h
demo/scenes/: PBRScene.cpp  PBRScene.h  ReflectionScene.cpp  ReflectionScene.h
engine/engine/: Engine.cpp  Engine.h  engine.cpp  engine.h
engine/graphics/: Window.cpp  Window.h  window.cpp  window.h
engine/imgui/: imgui_impl_glfw_gl3.cpp
engine/input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  keyboard.cpp  keyboard.h  mouse.h
engine/utils/: Color.h  Console.cpp  Console.h  FileSystem.h  Logger.h  Math.h  Types.h  color.h  console.cpp  console.h  fileio.h  logger.h  math.h  rendering_types.h  types.h
lib/include/: tiny_obj_loader.h
lib/lib/: assimp-vc140-mt.lib
resources/: assets.txt
resources/materials/: gold.material  plastic.material
resources/shaders/: basic_framebuffer.frag  basic_framebuffer.vert  basic_lighting.frag  basic_lighting.vert  basic_texture.frag  basic_texture.vert  env_reflection.frag  env_reflection.vert  env_refraction.frag  framebuffer_default.frag  lighting.frag  lighting.vert  mat_lighting.frag  model_loading_demo.frag  model_loading_demo.vert  normal_mapping.frag  pbr.frag  prototype1_lighting.frag  prototype1_lighting.vert  reflection_mapping.frag  reflection_mapping.vert  skybox.frag  skybox.vert  textured_mat_lighting.frag  textured_quad.vert
(+93 files in other folders)
